[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ojasx"
version = "1.0.0"
description = "The Universal AI Compute Engine — Run PyTorch on ANY GPU. Breaking the CUDA monopoly with OpenCL."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "TorchCL Contributors"},
]
keywords = ["pytorch", "opencl", "gpu", "deep-learning", "amd", "intel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "pyopencl>=2024.1",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-benchmark"]

[tool.setuptools.packages.find]
include = ["torchcl*"]

[tool.setuptools.package-data]
torchcl = ["kernels/*.cl"]
